# segnomms

./: .actrc  .bandit  .env.act.detailed  .envrc  .flake8  .gitignore  .readthedocs.yaml  .secrets.template  ACTIONS_STATUS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  cspell.json  flake.nix  lefthook.yml  package-lock.json  package.json  project-words.txt  pull-request-event.json  push-event.json  pyproject.toml  pytest.ini  release-event.json  test_commit_hook.md  workflow-dispatch-event.json
.github/: .release-please-manifest.json  act-precommit-full.yml  dependabot.yml  pull_request_template.md  release-please-config.json
.github/workflows/: _docs-build.yml  ci.yml  conventional-commits.yml  coverage.yml  docs.yml  example-release-process.yml  performance.yml  publish.yml  release-please.yml  release-staged.yml  release.yml  test.yml  validate-release.yml
.specify/ideas/: documentation-improvements.md  pattern-style-config-refactor.md  processor-split.md  project-naming.md  test-quality-audit.md
.specify/memory/: architecture-overview.md  constitution.md  cross-module-dependencies.md  developer-workflow.md  pilot-feature-plan.md  research.md
.specify/templates/: plan-template.md  spec-template.md
docs/: .gitignore  Makefile  build_docs.sh  requirements.txt  shape_examples.html
docs/source/: conf.py  contributing.rst  decoder_compatibility.rst  examples.rst  index.rst  installation.rst  quickstart.rst  shapes.rst  test_validation.rst  visual-gallery.rst
examples/: enhanced_intents_demo.py  safe_mode_examples.html  shape_examples  simple_example.py  simple_test_config.json  test_baseline_generator.py  test_code_improvements.py  test_html_examples.py  test_qr_design_verification.py  test_simple_qr_verification.py  test_visual_qr_verification.py  test_visual_regression_techniques.py  test_visual_workflow_integration.py
repo/: analyze-schemas-detailed.mjs  analyze-schemas.mjs  aspell_project_dict.txt  audit_boolean_naming.py  audit_makefile.py  build_wheel.py  calculate_coverage_diff.sh  check_doc_build.py  check_doc_dependencies.py  deploy_beta.py  docs_quality_gate.sh  generate_coverage_badge.sh  generate_coverage_summary.sh  generate_doc_coverage.py  generate_example_qrs.py  generate_performance_report.py  get-referenced-schemas.mjs  package-lock.json  package.json  quality_gate_checker.sh  run_comprehensive_coverage.sh  setup-dev-env.sh  setup_apt_fallback.sh  setup_cairo_macos.sh  setup_cairo_windows.ps1  setup_cspell.sh  setup_gcloud_registry.sh  setup_spell_checker.sh  spell_check_docs.py  spell_check_docs_cspell.py  summarize_security_scan.py  test_pypi_install.sh  test_readme_examples.py  test_segno_compatibility.py  test_wheel_installation.sh  validate_conventional_commits.sh  validate_docs_references.py  validate_release.py  validate_release_status.sh
repo/gha/: .actrc
scripts/: check_doc_contradictions.sh  extract_code_examples.py  verify_documentation_fixes.py
segnomms/: __init__.py  constants.py  exceptions.py  plugin.py  py.typed  types.py
segnomms/a11y/: __init__.py  accessibility.py
segnomms/algorithms/: __init__.py  clustering.py  models.py
segnomms/capabilities/: __init__.py  manifest.py
segnomms/color/: __init__.py  color_analysis.py  palette.py
segnomms/config/: __init__.py  enums.py  presets.py  schema.py
segnomms/core/: __init__.py  advanced_qr.py  detector.py  interfaces.py  models.py  performance.py
segnomms/degradation/: __init__.py  manager.py  models.py  rules.py
segnomms/intents/: __init__.py  models.py  processor.py
segnomms/plugin/: __init__.py  config.py  export.py  interface.py  patterns.py  rendering.py
segnomms/shapes/: __init__.py  basic.py  connected.py  factory.py  frames.py
segnomms/svg/: __init__.py  accessibility.py  composite.py  core.py  definitions.py  frame_visual.py  interactivity.py  models.py  path_clipper.py
segnomms/utils/: __init__.py  svg_builder.py
segnomms/validation/: __init__.py  composition.py  models.py  phase4.py
specs/001-basic-module-shapes/: spec.md
specs/001-initial-documentation-audit/: spec.md
specs/002-initial-documentation-audit/: plan.md  quickstart.md  spec.md  tasks.md
specs/003-naming-consistency/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
tests/: __init__.py  conftest.py  constants.py  coverage_bridge.py
tests/helpers/: __init__.py  custom_assertions.py  manage_visual_baselines.py  performance_monitor.py  scanning_harness.py  test_case_generator.py  test_output_manager.py
tests/integration/: __init__.py  conftest.py  test_accessibility_integration.py  test_advanced_qr_workflow.py  test_backward_compatibility.py  test_composition_integration.py  test_config_export.py  test_connected_shapes.py  test_decoder_smoke.py  test_intents_api.py  test_matrix_integration.py  test_phase4_integration.py  test_plugin_additional.py  test_plugin_integration.py  test_plugin_registration.py
tests/perf/: __init__.py  test_algorithm_benchmarks.py  test_example_generation_performance.py  test_matrix_performance.py  test_memory_profiling.py
tests/review/: __init__.py  html_generator.py  review_suite.py  svg_diff_integration.py
tests/structural/: __init__.py  test_svg_structure.py
tests/unit/: __init__.py  test_accessibility_core.py  test_advanced_qr_config.py  test_advanced_qr_generator.py  test_composition_validator.py  test_composition_validator_additional.py  test_composition_validator_compat.py  test_config_core.py  test_config_geometry.py  test_config_phases.py  test_config_validation_edge_cases.py  test_config_visual.py  test_core_detector.py  test_critical_edge_cases.py  test_degradation.py  test_deprecation_warnings.py  test_edge_cases_critical_algorithms.py  test_exceptions.py  test_frame_shapes.py  test_intent_error_handling.py  test_intents_processor_logic.py  test_matrix_manipulator.py  test_matrix_operations.py  test_palette.py  test_path_clipper.py  test_performance.py  test_phase4_additional.py  test_phase4_validator.py  test_plugin_core.py  test_plugin_exports.py  test_types.py  (+5 more)
(+86 files in other folders)
